--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,3 @@
 h1 {
-  background-color: rgb(104, 107, 44, 0.3);
-  text-align: center;
-	text-color: white;
-	padding: 10px;
+	background-color: green;
 }
