--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,13 @@
+body {
+	background-image: url('\images/IMG_3433.JPG');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: center;
+	background-size: cover;
+}
 h1 {
-	background-color: green;
+	color: white;
+	background-color: rgb(104, 107, 44, 0.3);
+	text-align: center;
+	padding: 10px;
 }
