--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url('\images/IMG_3433.JPG');
+	background-image: url('/images/IMG_3433.JPG');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-position: center;
