--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,19 @@
-h1 {
-  color: white;
-}
+body {
+			  padding-top: 30px;
+			background-image: url('images/IMG_3433.JPG');
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-position: center;
+			background-size: cover;
+		}
+		h1 {
+			color: white;
+			font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
+			background-color: rgba(104, 107, 44, 0.9);
+			text-align: center;
+			padding: 20px;
+		}
+	        .MainStuff {
+			width: 50%;
+			margin: auto;
+		}
