--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 		body {
 			padding-top: 30px;
-			background-image: url('../images/IMG_3433.JPG');
+			background-image: url('/main/images/IMG_3433.JPG');
 			background-repeat: no-repeat;
 			background-attachment: fixed;
 			background-position: center;
