--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,7 @@
 			color: white;
 			font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
 			background-color: rgba(104, 107, 44, 0.9);
+			border-radius: 25px;
 			text-align: center;
 			padding: 20px;
 		}
