--- a/assets/style.css
+++ b/assets/style.css
@@ -10,10 +10,11 @@
 			font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
 			background-color: rgba(104, 107, 44, 0.9);
 			text-align: center;
+			border: 4px lightblue;
+			border-radius: 25px;
 			padding: 20px;
 		}
 	        .MainStuff {
 			width: 50%;
 			margin: auto;
-			border-radius: 25px;
 		}
