--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,14 @@
 			width: 50%;
 			margin: auto;
 		}
-		button {
-			background-color: #67e6cc;
+		.mainbutton {
+			border: 0;
+			line-height: 2.5;
+			padding: 0 20px;
+			font-size: 1rem;
+			text-align: center;
+			color: #fff;
+			text-shadow: 1px 1px 1px #000;
+			border-radius: 10px;
+			background-color: rgba(220, 0, 0, 1);
 		}
