--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 		body {
-			padding-top: 30px;
+			padding-top: 0px;
 			background-repeat: no-repeat;
 			background-attachment: fixed;
 			background-position: center;
@@ -10,22 +10,27 @@
 			font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
 			background-color: rgba(104, 107, 44, 0.9);
 			text-align: center;
+			font-size: 1.5em;
 			border: 4px lightblue;
 			border-radius: 25px;
 			padding: 20px;
 		}
 	        .MainStuff {
-			width: 50%;
+			width: 100%;
+			margin: auto;
+		}
+		.ButtonCont {
+			width: 40%
 			margin: auto;
 		}
 		.mainbutton {
 			border: 0;
 			line-height: 2.5;
 			padding: 0 20px;
-			font-size: 1rem;
+			font-size: 6rem;
 			text-align: center;
 			color: #fff;
 			text-shadow: 1px 1px 1px #000;
 			border-radius: 10px;
-			background-color: rgba(220, 0, 0, 1);
+			background-color: #67e6cc;
 		}
