--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,5 @@
 		body {
+			margin: 0px;
 			padding-top: 0px;
 			background-repeat: no-repeat;
 			background-attachment: fixed;
@@ -14,6 +15,7 @@
 			padding: 20px;
 		}
 	        .MainStuff {
+			margin: 0px;
 			padding: 0px;
 			width: 100%;
 			margin: auto;
