--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,10 @@
 			background-position: center;
 			background-size: cover;
 		}
+		main {
+			padding: 0px;
+			margin: 0px;
+		}
 		h1 {
 			color: white;
 			font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
