--- a/assets/style.css
+++ b/assets/style.css
@@ -6,11 +6,8 @@
 			background-position: center;
 			background-size: cover;
 		}
-		main {
-			padding: 0px;
-			margin: 0px;
-		}
 		h1 {
+			margin-top: 0px;
 			color: white;
 			font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
 			background-color: rgba(104, 107, 44, 0.9);
