--- a/assets/style.css
+++ b/assets/style.css
@@ -38,3 +38,12 @@
 			border-radius: 10px;
 			background-color: #67e6cc;
 		}
+		.mainbutton:hover {
+  			background-color: rgba(255, 0, 0, 1);
+		}
+
+		.mainbutton:active {
+  			box-shadow:
+    			inset -2px -2px 3px rgba(255, 255, 255, 0.6),
+    			inset 2px 2px 3px rgba(0, 0, 0, 0.6);
+			}
