--- a/assets/style.css
+++ b/assets/style.css
@@ -22,7 +22,7 @@
 			margin: auto;
 		}
 		.ButtonCont {
-			width: 40%;
+			width: auto;
 			margin: auto;
 			margin-top: 40px;
 			text-align: center;
