--- a/assets/style.css
+++ b/assets/style.css
@@ -25,6 +25,7 @@
 			width: auto;
 			margin: auto;
 			margin-top: 40px;
+			padding-top: 30px;
 			text-align: center;
 		}
 		.mainbutton {
@@ -47,4 +48,4 @@
   			box-shadow:
     			inset -2px -2px 3px rgba(255, 255, 255, 0.6),
     			inset 2px 2px 3px rgba(0, 0, 0, 0.6);
-			}
+		}
