--- a/assets/style.css
+++ b/assets/style.css
@@ -49,3 +49,22 @@
     			inset -2px -2px 3px rgba(255, 255, 255, 0.6),
     			inset 2px 2px 3px rgba(0, 0, 0, 0.6);
 		}
+		.SecButtonCont {
+			width: auto;
+			margin: auto;
+			margin-top: 20px;
+			padding-top: 30px;
+			text-align: center;
+		}
+		.secondbutton {
+			margin: auto;
+			border: 0;
+			line-height: 2.0;
+			padding: 0 15px;
+			font-size: 1rem;
+			text-align: center;
+			color: #fff;
+			text-shadow: 1px 1px 1px #000;
+			border-radius: 10px;
+			background-color: #67e6cc;
+		}
