--- a/assets/style.css
+++ b/assets/style.css
@@ -66,5 +66,5 @@
 			color: #fff;
 			text-shadow: 1px 1px 1px #000;
 			border-radius: 10px;
-			background-color: #197563;
+			background-color: #043d32;
 		}
