--- a/assets/style.css
+++ b/assets/style.css
@@ -52,8 +52,8 @@
 		.SecButtonCont {
 			width: auto;
 			margin: auto;
-			margin-top: 10px;
-			padding-top: 20px;
+			margin-top: 5px;
+			padding-top: 10px;
 			text-align: center;
 		}
 		.secondbutton {
@@ -67,4 +67,13 @@
 			text-shadow: 1px 1px 1px #000;
 			border-radius: 10px;
 			background-color: #043d32;
+		}
+		.secondbutton:hover {
+  			background-color: rgba(104, 107, 100, 1);
+		}
+
+		.secondbutton:active {
+  			box-shadow:
+    			inset -2px -2px 3px rgba(255, 255, 255, 0.6),
+    			inset 2px 2px 3px rgba(0, 0, 0, 0.6);
 		}
