--- a/assets/style.css
+++ b/assets/style.css
@@ -16,10 +16,11 @@
 			padding: 20px;
 		}
 	        .MainStuff {
-			margin-top: 0px;
 			padding: 0px;
 			width: 100%;
 			margin: auto;
+			margin-top: 0px;
+			margin-bottom: 20px;
 		}
 		.ButtonCont {
 			width: auto;
