--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@
 			width: auto;
 			margin: auto;
 			margin-top: 40px;
-			padding-top: 30px;
+			padding-top: 20%;
 			text-align: center;
 		}
 		.mainbutton {
